--- a/.github/workflows/pr-flow.yml
+++ b/.github/workflows/pr-flow.yml
@@ -26,7 +26,7 @@ jobs:
         PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
       run: |
         echo "Cloning private repository..."
-        git clone https://$PAT_TOKEN@github.com:priyanshu-247/pr-flow.git
+        git clone https://$PAT_TOKEN@github.com/priyanshu-247/pr-flow.git
         echo "Repository cloned successfully!"
 
     - name: Set up Python
