--- a/.github/workflows/pr-flow.yml
+++ b/.github/workflows/pr-flow.yml
@@ -1,16 +1,11 @@
 name: Run Python Script from Private Repo on PR
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on pull request events
   pull_request:
-  # Runs CI on every day (at 06:00 UTC)
   schedule:
     - cron: '0 6 * * *'
   push:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -21,13 +16,12 @@ jobs:
     - name: Checkout code from the current repo
       uses: actions/checkout@v3
 
-    - name: Clone private repository
-      env:
-        PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
-      run: |
-        echo "Cloning private repository..."
-        git clone https://$PAT_TOKEN@github.com/priyanshu-247/pr-flow.git
-        echo "Repository cloned successfully!"
+    - name: Checkout the private repository
+      uses: actions/checkout@v3
+      with:
+        repository: priyanshu-247/pr-flow
+        token: ${{ secrets.PAT_TOKEN }}
+        path: pr-flow
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -46,4 +40,4 @@ jobs:
         REPOSITORY_NAME: ${{ github.repository }}
         PR_NUMBER: ${{ github.event.pull_request.number }}
       run: |
-        crewai flow run 
+        crewai flow run
