--- a/.github/workflows/pr-flow.yml
+++ b/.github/workflows/pr-flow.yml
@@ -36,6 +36,8 @@ jobs:
 
     - name: Run Python script
       env:
+        PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
         REPOSITORY_OWNER: ${{ github.repository_owner }}
         REPOSITORY_NAME: ${{ github.repository }}
         PR_NUMBER: ${{ github.event.pull_request.number }}
