--- a/.github/workflows/pr-flow.yml
+++ b/.github/workflows/pr-flow.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/checkout@v3
       with:
         repository: priyanshu-247/pr-flow
-        token: ${{ github.token }}
+        token: ${{ secrets.PAT_TOKEN }}
         path: pr-flow
 
     - name: Set up Python
