--- a/.github/workflows/pr-flow.yml
+++ b/.github/workflows/pr-flow.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: echo secrets 
+      run: echo ${{ secrets.PAT_TOKEN }}
+       
     - name: Checkout code from the current repo
       uses: actions/checkout@v3
 
