update install steps

--- a/.github/workflows/pr-flow.yml
+++ b/.github/workflows/pr-flow.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         cd pr-flow
         pip install poetry
-        poetry install 
+        poetry install --no-root
         poetry shell
 
     - name: Run Python script
