--- a/.github/workflows/pr-flow.yml
+++ b/.github/workflows/pr-flow.yml
@@ -29,7 +29,8 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 'pypy3.11' 
+        python-version: '3.11' 
+        check-latest: true
 
     - name: Install dependencies
       run: |
