--- a/.github/workflows/pr-flow.yml
+++ b/.github/workflows/pr-flow.yml
@@ -32,11 +32,23 @@ jobs:
         python-version: '3.11' 
         check-latest: true
 
-    - name: Install dependencies
+    - name: Install poetry
+      uses: abatilo/actions-poetry@v2
+    
+    - name: Setup a local virtual environment (if no poetry.toml file)
       run: |
-        cd pr-flow
-        pip install crewai crewai-tools
-        crewai install 
+          cd pr-flow
+          poetry config virtualenvs.create true --local
+          poetry config virtualenvs.in-project true --local
+
+    - uses: actions/cache@v3
+      name: Define a cache for the virtual environment based on the dependencies lock file
+      with:
+          path: ./.venv
+          key: venv-${{ hashFiles('poetry.lock') }}
+
+    - name: Install the project dependencies
+      run: poetry install
         
     - name: Run Python script
       env:
