--- a/.github/workflows/pr-flow.yml
+++ b/.github/workflows/pr-flow.yml
@@ -25,6 +25,8 @@ jobs:
         repository: priyanshu-247/pr-flow
         token: ${{ secrets.PAT_TOKEN }}
         path: pr-flow
+      run: |
+        cd pr-flow
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -37,7 +39,6 @@ jobs:
     
     - name: Setup a local virtual environment (if no poetry.toml file)
       run: |
-          cd pr-flow
           poetry config virtualenvs.create true --local
           poetry config virtualenvs.in-project true --local
 
