--- a/.github/workflows/pr-flow.yml
+++ b/.github/workflows/pr-flow.yml
@@ -25,14 +25,15 @@ jobs:
         repository: priyanshu-247/pr-flow
         token: ${{ secrets.PAT_TOKEN }}
         path: pr-flow
-      run: |
-        cd pr-flow
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11' 
         check-latest: true
+    
+    - name: Change directory
+      run: cd pr-flow
 
     - name: Install poetry
       uses: abatilo/actions-poetry@v2
