--- a/.github/workflows/pr-flow.yml
+++ b/.github/workflows/pr-flow.yml
@@ -60,7 +60,7 @@ jobs:
         PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
         REPOSITORY: "dell/terraform-provider-powerscale"
-        PR_NUMBER: "218"
+        PR_NUMBER: 220
       run: |
         echo $GROQ_API_KEY
         echo $PAT_TOKEN
